currentState/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: demo-app
spec:
  selector:
    app: catalog-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
