currentState/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: demo-app
spec:
  selector:
    app: orders-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
