currentState/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: demo-app
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
